--- a/index.html
+++ b/index.html
@@ -251,9 +251,10 @@
       <p class="form-text">
         株式会社estraへのお問い合わせはこちら
       </p>
-      <form action="" class="">
+      <div class="line"></div>
+      <!-- <form action="" class="">
       <input type="text" class="input-text">
-      </form>
+      </form> -->
       <div class="form-btn">
         <a href="">お問合せ</a>
       </div>
